--- a/static/index.html
+++ b/static/index.html
@@ -90,6 +90,7 @@
 </svg>
 
 <body>
+    <button id="sidebar-toggle" class="sidebar-toggle">☰</button>
     <aside id="sidebar">
         <div id="user-info">
             Logged in as: <span id="username-display">Loading...</span>
