--- a/static/index.html
+++ b/static/index.html
@@ -182,6 +182,7 @@
                 <div id="now-playing">
 
                     <div id="track-info">
+                        <img id="mini-cover-art" src="" alt="Cover Art" />
                         <h3 id="track-title">No song selected</h3>
                         <p id="track-artist"></p>
                     </div>
