--- a/static/index.html
+++ b/static/index.html
@@ -154,6 +154,19 @@
                 </main>
             </div>
 
+            <div id="donation-modal" class="modal">
+                <div class="modal-content">
+                    <span class="close-btn" id="close-modal-btn">&times;</span>
+                    <h2>Support the Site</h2>
+                    <p>
+                        If you're enjoying the site, I want to let you know that I coded it all by myself and I'm also
+                        hosting it out of my own pocket ($20/month VPS). If you'd like to support me, feel free to
+                        donate!
+                    </p>
+                    <a href="https://ko-fi.com/micr0byte" target="_blank" id="donate-button">Donate on Ko-fi</a>
+                </div>
+            </div>
+
             <div id="playlist-menu" class="hidden">
                 <h3>Select Playlist</h3>
                 <div id="existing-playlists"></div>
