--- a/static/index.html
+++ b/static/index.html
@@ -164,6 +164,7 @@
                         donate!
                     </p>
                     <a href="https://ko-fi.com/micr0byte" target="_blank" id="donate-button">Donate on Ko-fi</a>
+                    <button id="alredy-donated-button">I've already donated</button>
                 </div>
             </div>
 
