--- a/static/index.html
+++ b/static/index.html
@@ -159,12 +159,12 @@
                     <span class="close-btn" id="close-modal-btn">&times;</span>
                     <h2>Support the Site</h2>
                     <p>
-                        If you're enjoying the site, I want to let you know that I coded it all by myself and I'm also
-                        hosting it out of my own pocket ($20/month VPS). If you'd like to support me, feel free to
-                        donate!
+                        If you're enjoying the site, I want to let you know that I coded it all myself in my spare time
+                        and I'm also hosting it out of my own pocket ($20/month VPS). If you'd like to support me, feel
+                        free to donate! Of course, it's not required, but it would be greatly appreciated.
                     </p>
                     <a href="https://ko-fi.com/micr0byte" target="_blank" id="donate-button">Donate on Ko-fi</a>
-                    <p id="alredy-donated-button">I've already donated</p>
+                    <p id="alredy-donated-button">I've already donated (hide forever)</p>
                 </div>
             </div>
 
