--- a/static/index.html
+++ b/static/index.html
@@ -147,6 +147,8 @@
                     </section>
 
                     <section id="music-list-section">
+                        <h2 id="whole-playlists-title">Playlists List</h2>
+                        <div id="whole-playlists-list" class="playlist-cards"></div>
                         <h2 id="music-list-title">Music List</h2>
                         <div id="music-list" class="music-list"></div>
 
