--- a/static/index.html
+++ b/static/index.html
@@ -147,8 +147,10 @@
                     </section>
 
                     <section id="music-list-section">
-                        <h2 id="whole-playlists-title">Playlists List</h2>
-                        <div id="whole-playlists-list" class="playlist-cards"></div>
+                        <div id="recent-playlists">
+                            <h2 id="whole-playlists-title">Playlists List</h2>
+                            <div id="whole-playlists-list" class="playlist-cards"></div>
+                        </div>
                         <h2 id="music-list-title">Music List</h2>
                         <div id="music-list" class="music-list"></div>
 
