--- a/static/index.html
+++ b/static/index.html
@@ -164,10 +164,16 @@
                     <h2>Support the Site</h2>
                     <p>
                         If you're enjoying the site, I want to let you know that I coded it all myself in my spare time
-                        and I'm also hosting it out of my own pocket ($20/month VPS). If you'd like to support me, feel
+                        and I'm also hosting it out of my own pocket. If you'd like to support me, feel
                         free to donate! Of course, it's not required, but it would be greatly appreciated.
                     </p>
+                    <p>ko-fi (normies):</p>
                     <a href="https://ko-fi.com/micr0byte" target="_blank" id="donate-button">Donate on Ko-fi</a>
+                    <blockquote>
+                        <p>Monero (privacy enthusiasts):<span
+                                id="monero-wallet">44j6qAHAsaVDcw3suRULVGW2t1i812kXCVneVybtcCjZ7jGK2XcBRESFFVAFSx2KWJGzNYKwhWAvwU7mJU4AWb3oRYWD6vD</span>
+                        </p>
+                    </blockquote>
                     <p id="alredy-donated-button">I've already donated (hide forever)</p>
                 </div>
             </div>
