--- a/static/index.html
+++ b/static/index.html
@@ -178,7 +178,7 @@
                 <p id="alredy-donated-button">I've already donated (hide forever)</p>
             </div>
 
-            <div id="playlist-menu" class="hidden">
+            <div id="playlist-menu" class="menu-hidden">
                 <h3>Select Playlist</h3>
                 <div id="existing-playlists"></div>
                 <h3>Create New Playlist</h3>
