--- a/static/index.html
+++ b/static/index.html
@@ -191,7 +191,7 @@
 
             <footer id="now-playing-container">
                 <div id="cover-art-container" class="hidden">
-                    <img id="cover-art" src="" alt="Cover Art" />
+                    <img id="cover-art" src="https://music.micr0.dev/api/thumbnail/0?size=600" alt="Cover Art" />
                 </div>
                 <div id="data-scroll-container" class="hidden">
                     <div id="data-scroll">
