--- a/static/index.html
+++ b/static/index.html
@@ -190,10 +190,10 @@
             </div>
 
             <footer id="now-playing-container">
-                <div id="cover-art-container" class="hidden">
+                <div id="cover-art-container">
                     <img id="cover-art" src="https://music.micr0.dev/api/thumbnail/0?size=600" alt="Cover Art" />
                 </div>
-                <div id="data-scroll-container" class="hidden">
+                <div id="data-scroll-container">
                     <div id="data-scroll">
                         <span>2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
                         <span id="num2">2013 Album Lossless .FLAC 16-Bit 44.1kHz</span>
