sharing is caring

--- a/static/share.html
+++ b/static/share.html
@@ -136,6 +136,7 @@
             </footer>
         </div>
 
+        <script src="script.js"></script>
         <script src="share.js"></script>
 </body>
 
